# metadata_extraction_demo

./: .bumpversion.cfg  .dockerignore  .gitignore  .justfile  Containerfile  Instructions.md  README.md  metadata.yaml  pyproject.toml  requirements.txt  sample.env
benchmark/: benchmark.py
benchmark/configs/: vlm-qwen2.5_7b.yaml
metadata_extraction_demo/: app.py  constants.py  convert.py  docling_server.py  metadata_tagger.py  pipeline.py  utils.py
metadata_extraction_demo/converters/: __init__.py  base.py  docling_local.py  docling_server.py  docling_vlm.py  utils.py
